# calc

./: CMakeLists.txt  Makefile  README.md  calc.cpp  error.cpp  parser.cpp  parser.h  test.cpp  token.cpp  token.h  token_kind.cpp  token_kind.h  token_stream.cpp  token_stream.h
.github/workflows/: cmake-single-platform.yml
src/: main.cpp  test.cpp
src/lib/: error.cpp  error.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp  token_kind.cpp  token_stream.cpp  token_stream.hpp
